<resources>
    <string name="app_name">Agua Dulce</string>
    <string name="btn_txt_ingresar">Ingresar</string>
    <string name="et_text_usuario">Ingresa tu usuario</string>
    <string name="et_text_psw">Ingresa tu contraseña</string>
    <string name="cbx_txt_recuerda">Recordar usuario</string>
    <string name="tv_txt_bienvenido">Bienevenido</string>
    <string name="txt_clave_aleatoria">Generar\nClave aleatoria</string>
    <string name="txt_generar">Generar</string>
    <string name="txt_consultar_grafica">Consultar\nGráficas</string>
    <string name="txt_ver_galeria">Ver\nGalería fotográfica</string>
    <string name="txt_consultar_info">Consultar\nInformación catastral</string>
    <string name="txt_agregar_ubicacion">Agregar\nUbicación</string>
    <string name="txt_consultar_ubicaciones">Consultar\nUbicaciones</string>
    <string name="generador_clave_txt">Generador de clave aleatoria</string>
    <string name="clave_activa_txt">Clave activa:</string>
    <string name="btn_generarclave_txt">Generar clave</string>
    <string name="btn_compartir_txt">Compartir</string>
    <string name="btn_regresar_txt">Regresar</string>
    <string name="graficas_txt">Gráficas - Reportes</string>
    <string name="fotos_txt">Fotografías terrenos</string>
    <string name="fotos_descripcion_txt">Fotografía detalle</string>
    <string name="informacion_catastral_txt">Información catastral</string>
</resources>
