<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".login.Login">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:orientation="vertical"
       android:gravity="center"
       android:background="@drawable/gradiente_perfil"
       android:layout_gravity="center">

       <ImageView
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:src="@drawable/agua_dulce"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/et_text_usuario"
            android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="100dp"
            />
        <requestFocus/>

        <EditText
            android:id="@+id/etPsw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/et_text_psw"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:layout_marginBottom="100dp"
            />

        <Button
            android:id="@+id/button2"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn"
            android:textColor="@color/textoBoton"
            android:text="@string/btn_txt_ingresar" />


    </LinearLayout>


</LinearLayout>